# CodexBar

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
Sources/CodexBarCLI/: CLIEntry.swift  CLIHelpers.swift  CLIIO.swift
Sources/CodexBarCore/: UsageFetcher.swift
Sources/CodexBarCore/Host/PTY/: TTYCommandRunner.swift
Sources/CodexBarCore/Host/Process/: SubprocessRunner.swift
Sources/CodexBarCore/Logging/: JSONStderrLogHandler.swift
Sources/CodexBarCore/Providers/Claude/: ClaudeCLISession.swift  ClaudeUsageFetcher.swift
Sources/CodexBarCore/Providers/Codex/: CodexCLISession.swift
Sources/CodexBarCore/Providers/JetBrains/: JetBrainsIDEDetector.swift
Sources/CodexBarCore/Providers/Kiro/: KiroStatusProbe.swift
docs/: FORK_QUICK_START.md  FORK_TODO.md  architecture.md
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: main.ts  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: cli_bridge.rs  commands.rs  lib.rs  main.rs  settings.rs  tray.rs  window.rs
tauri-app/src/components/: ActionLinks.ts  App.ts  Header.ts  ProgressBar.ts  ProviderCard.ts  ProviderTabs.ts  Settings.ts
tauri-app/src/styles/: main.css  progress.css
tauri-app/src/utils/: format.ts
