[package]
name = "codexbar-tauri"
version = "0.1.0"
edition = "2021"
description = "Cross-platform system tray UI for CodexBar"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync"] }
dirs = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
